Update AICTE  - Shopping Trends Analysis.ipynb

--- a/AICTE  - Shopping Trends Analysis.ipynb
+++ b/AICTE  - Shopping Trends Analysis.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "<p style=\"padding: 7px; color: Black;\">\n",
     "      <ul>  📌 <b>Customer ID</b> - Unique identifier for each customer.<br>\n",
-    "        📌 <b>Age</b> - Age of the customer.<br>\n",
+    "        📌 <b>Age</b> - Age Of The Customer.<br>\n",
     "        📌 <b>Gender</b> - Gender of the customer (Male/Female).<br>\n",
     "        📌 <b>Item Purchased</b> - The item purchased by the customer.<br>\n",
     "        📌 <b>Category</b> - Category of the item purchased.<br>\n",
